--- a/dotbot.html
+++ b/dotbot.html
@@ -1,10 +1,61 @@
 var game = new Phaser.Game(800, 800, Phaser.AUTO, '', { preload: preload, create: create, update: update});
 
 function preload() {
+
+  var circleRadius = 10;
+
+  var colorBlue =
+  var xBlue = 
+  var yBlue = 
+  
+  var colorRed - 
+  var xRed = 
+  var yRed = 
+  
+  var colorGreen = 
+  var xGreen = 
+  var yGreen = 
+
+  var colorYellow = 
+  var xYellow = 
+  var yYellow = 
+  
+
 }
 
 function create() {
+  var graphics = game.add.graphics(100,100);
+  
+  //draw Blue
+  graphics.lineStyle(0);
+  graphics.beginFill(colorBlue, 1);
+  graphics.drawCircle(xBlue, yBlue, circleRadius);
+
+  //draw Red
+  graphics.lineStyle(0);
+  graphics.beginFill(colorRed, 1);
+  graphics.drawCircle(xRed, yRed, circleRadius);
+
+  //draw Green
+  graphics.lineStyle(0);
+  graphics.beginFill(colorGreen, 1);
+  graphics.drawCircle(xGreen, yGreen, circleRadius);
+
+  //draw Yellow
+  graphics.lineStyle(0);
+  graphics.beginFill(colorYellow, 1);
+  graphics.drawCircle(xYellow, yYellow, circleRadius);
+
+  window.graphics = graphics;
+} 
+  
 }
+  
+  
+  
+}
+
+
 
 function update() {
 }
